samples/_failures_safe/1761162498_e3c123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dd772fc.c: In function ‘main’:
./samples/SAFE/__tmp_7dd772fc.c:172:12: error: missing terminating " character
  172 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_7dd772fc.c:172:5: error: expected expression at end of input
  172 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_7dd772fc.c:172:5: error: expected declaration or statement at end of input
